--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,67 @@
 body{
     font-family: 'Roboto', sans-serif;
 }
+
+.container{
+    width: 100%;
+    height: 100%;
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
+}
+
+.col{
+    display: flex;
+    flex-direction: column;
+}
+
+.jc-end{
+    justify-content: flex-end;
+}
+
+.al-center{
+    align-items: center;
+}
+
+.boxed{
+    padding: 0px 30px;
+}
+
+.gap-10{
+    gap: 10px;
+}
+
+.btn{
+    cursor: pointer;
+}
+
+/* header */
+header{
+    height: 50px;
+    background-color: #000;
+    color: #fff;
+}
+
+header button.btn-header{
+    min-height: 25px;
+    padding: 4px 10px;
+    border-radius: 8px;
+    border: 1px solid rgba(75,74,74,0.4);
+    background-color: rgba(75,74,74, 0.8);
+    color: #fff;
+}
+
+header button.btn-header:hover{
+    border: 1px solid rgba(75,74,74,0.8);
+    background-color: rgba(75,74,74, 1);
+}
+
+header button.btn-header .ri-grid-fill{
+    margin-right: 5px;
+}
+
+header button.btn-header .ri-split-cells-horizontal{
+    font-size: 18px;
+}
