--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,14 @@ body{
     align-items: center;
 }
 
+.wrap{
+    flex-wrap: wrap;
+}
+
+.overflow-scroll{
+    overflow: scroll;
+}
+
 .boxed{
     padding: 0px 30px;
 }
@@ -80,6 +88,10 @@ button.btn i{
     font-weight: 600;
 }
 
+.p-relative{
+    position: relative;
+}
+
 
 /* header */
 header{
@@ -104,15 +116,42 @@ header button.btn .ri-split-cells-horizontal{
 
 /* main */
 main{
-    background-color: red;
+    background-color: #000;
     height: calc(100vh - 125px);
+    padding: 15px 0px;
+    z-index: -1;
 }
+
+main .grid .col{
+    flex-basis: calc(95% / 7);
+    margin-bottom: 1%;
+}
+
+.grid img{
+    width: 100%;
+}
+
+.tag{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(75,74,74, 1);
+    padding: 4px 8px;
+    color: #fff;
+    font-size: 12px;
+}
+
+.tag i{
+    margin-right: 5px;
+}
+
 
 /* footer */
 footer{
     width: 100%;
     height: 75px;
     background-color: #262626;
+    z-index: 999;
 }
 
 footer button.btn-large i{
